--- a/01_Introduccion/notebook_01.ipynb
+++ b/01_Introduccion/notebook_01.ipynb
@@ -8,7 +8,7 @@
                 "## Algoritmos, Complejidad y Buenas Prácticas\n",
                 "### Prof. Andrés Mena Abarca\n",
                 "\n",
-                "**Nombre del estudiante:** _________________________________\n",
+                "**Nombre del estudiante:** Cristopher Mora Rodríguez_\n",
                 "\n",
                 "---\n",
                 "\n",
