--- a/01_Introduccion/notebook_01.ipynb
+++ b/01_Introduccion/notebook_01.ipynb
@@ -38,7 +38,23 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Hola Ana, bienvenida al curso.\n",
+                        "------------------------------\n",
+                        "SECCIÓN DE DATOS\n",
+                        "------------------------------\n"
+                    ]
+                }
+            ],
+            "source": []
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 7,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
                         "------------------------------\n",
                         "SECCIÓN DE DATOS\n",
                         "------------------------------\n"
@@ -48,7 +64,8 @@
             "source": [
                 "# 1. Concatenación (Unir)\n",
                 "#Completar el siguiente código para que imprima \"Hola Ana, bienvenida al curso.\"\n",
-                "\n",
+                "nombre = \"Ana\"\n",
+                "saludo = \"Saludo\" +nombre+\",bienvenido al curso\"\n",
                 "\n",
                 "# 2. Repetición\n",
                 "separador = \"-\" * 30\n",
@@ -77,17 +94,33 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "PY\n",
+                        "202\n",
+                        "Lenguaje: PY | Año: 202\n"
+                    ]
+                }
+            ],
             "source": [
+                "#Slicing\n",
+                "\n",
                 "codigo_curso = \"PY-101-2026\"\n",
                 "\n",
                 "# Extraer el lenguaje (primeros 2 caracteres, índice 0 al 2 sin incluir el 2)\n",
-                "\n",
+                "lenguaje = codigo_curso[0:2]\n",
+                "print(lenguaje)\n",
                 "\n",
                 "# Extraer el año (últimos 4 caracteres)\n",
+                "#anio = codigo_curso[7:11] *** muetra el año en un rango\n",
+                "#anio = codigo_curso[7:] *** del 7 hasta el final\n",
+                "#anio = codigo_curso[7:11] *** muetra el año en un rango\n",
+                "print(anio)\n",
                 "\n",
-                "\n",
-                "#print(f\"Lenguaje: {lenguaje} | Año: {anio}\")"
+                "print(f\"Lenguaje: {lenguaje} | Año: {anio}\")"
             ]
         },
         {
@@ -130,6 +163,27 @@
             ]
         },
         {
+            "cell_type": "code",
+            "execution_count": 11,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Limpiado: 'hola mundo'\n"
+                    ]
+                }
+            ],
+            "source": [
+                "texto_sucio = \"   hOla MunDo  \"\n",
+                "\n",
+                "# 1. Limpieza y Normalización\n",
+                "limpio = texto_sucio.strip().lower()\n",
+                "print(f\"Limpiado: '{limpio}'\")"
+            ]
+        },
+        {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -139,19 +193,29 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 14,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "producto: Laptop Gamer | $1,250.46\n"
+                    ]
+                }
+            ],
             "source": [
                 "producto = \"Laptop Gamer\"\n",
                 "precio = 1250.559\n",
                 "descuento = 0.10\n",
+                "moneda = \"$\"\n",
                 "\n",
                 "# :.2f  -> 2 decimales\n",
                 "# :,    -> Separador de miles (ej: 1,000)\n",
                 "#Crea un mensaje que incluya el nombre del producto y su precio final con descuento aplicado, formateado con separadores de miles y dos decimales.\n",
                 "# Ejemplo: \"Producto: Laptop Gamer | Precio Final: $1,125.50\"\n",
-                "\n",
+                "#mensaje = print(f\"${precio * 1-descuento:,.2f}\")\n",
+                "mensaje = f\"producto: {producto} | {moneda}{precio * 1-descuento:,.2f}\"\n",
                 "\n",
                 "print(mensaje)"
             ]
@@ -187,6 +251,11 @@
                 "usuario = input(\"Usuario: \").strip().lower()\n",
                 "clave = input(\"Clave: \")\n",
                 "llavemestra = False\n",
+                "\n",
+                "if (usuario == \"Admin\" and clave == \"123\") or llavemestra == True:\n",
+                "    print(\"Login exitoso\")\n",
+                "else:\n",
+                "    print(\"Login erroneo\")\n",
                 "\n",
                 "# Lógica: Debe ser admin Y clave 1234, o llave maestra True\n"
             ]
@@ -226,6 +295,33 @@
             ]
         },
         {
+            "cell_type": "code",
+            "execution_count": 15,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "estoy trabajando\n",
+                        "estoy trabajando\n",
+                        "estoy trabajando\n",
+                        "Hubo problemas, no se pudo terminar\n"
+                    ]
+                }
+            ],
+            "source": [
+                "try:\n",
+                "    print(\"estoy trabajando\")\n",
+                "    print(\"estoy trabajando\")\n",
+                "    print(\"estoy trabajando\")\n",
+                "    print(8/0)\n",
+                "    print(\"termine de trabajar\")\n",
+                "except ZeroDivisionError:\n",
+                "    print(\"Hubo problemas, no se pudo terminar\")        "
+            ]
+        },
+        {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -242,7 +338,11 @@
                 "dato_usuario = input(\"Ingresa un dato opcional: \").strip()\n",
                 "\n",
                 "#strip() elimina espacios al inicio y al final, lower() convierte a minúsculas\n",
-                "# Validación de entrada: Si el usuario no ingresa nada, mostrar una advertencia\n"
+                "# Validación de entrada: Si el usuario no ingresa nada, mostrar una advertencia\n",
+                "if not dato_usuario:\n",
+                "    print(\"Epacio en blanco\")\n",
+                "else:\n",
+                "    print(f\"Dato increible: {dato_usuario} \" )"
             ]
         },
         {
@@ -400,7 +500,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.13.7"
+            "version": "3.13.12"
         }
     },
     "nbformat": 4,
