--- a/01_Introduccion/notebook_01.ipynb
+++ b/01_Introduccion/notebook_01.ipynb
@@ -411,15 +411,23 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Usuario: Juan Perez | Email:  juan.perez@empresa.com  \n"
+                    ]
+                }
+            ],
             "source": [
                 "# Datos de entrada (SUCIOS)\n",
-                "nombre_input = \"  juAN pEREz   \"\n",
-                "email_input = \"  Juan.Perez@Empresa.COM \"\n",
+                "nombre_input = (\"  juAN pEREz   \").strip().title()\n",
+                "email_input = (\"  Juan.Perez@Empresa.COM \").lower()\n",
                 "\n",
                 "# Escribe tu código aquí:\n",
                 "\n",
-                "\n",
+                "print(f\"Usuario: {nombre_} input| Email:{email_input} \")\n",
                 "# Resultado esperado: \"Usuario: Juan Perez | Email: juan.perez@empresa.com\""
             ]
         },
@@ -446,15 +454,32 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 8,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "No cumple con los requisitos para entrar\n"
+                    ]
+                }
+            ],
             "source": [
-                "edad = 20\n",
+                "\n",
+                "edad = 15\n",
                 "es_vip = False\n",
                 "tiene_pase = True\n",
                 "\n",
-                "# Escribe tu estructura if-elif-else aquí:\n"
+                "# Escribe tu estructura if-elif-else aquí:\n",
+                "if (edad >= 18 and edad < 21 ) and tiene_pase == True:\n",
+                "    print(\"Entra 1\")\n",
+                "elif (edad > 21 ):\n",
+                "    print(\"Entra 2\")\n",
+                "elif ((edad > 0 and edad < 18) and es_vip == True):\n",
+                "    print(\"Entra 3\")\n",
+                "else:\n",
+                "    print (\"No cumple con los requisitos para entrar\")"
             ]
         },
         {
@@ -468,18 +493,41 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Dueño\n",
+                        "Total: 0\n"
+                    ]
+                }
+            ],
             "source": [
                 "# --- CÓDIGO MALO ---\n",
+                "\"\"\"\n",
                 "n=\"Pedro\"\n",
                 "P=500\n",
                 "if n==\"Pedro\":print(\"Dueño\");P=0 \n",
                 "else:print(\"Cliente\")\n",
                 "print(\"Total: \"+str(P))\n",
                 "\n",
+                "\"\"\"\n",
+                "\n",
                 "# --- TU CÓDIGO BUENO ABAJO ---\n",
+                "\n",
+                "n = 'Pedro'\n",
+                "p = 500\n",
+                "if (n == \"Pedro\"):\n",
+                "    print(\"Dueño\")\n",
+                "    p = 0\n",
+                "else:\n",
+                "    print(\"Cliente\")\n",
+                "    \n",
+                "print(f\"Total: {p}\")\n",
+                "    \n",
                 "\n"
             ]
         }
