Arreglar error de carga inicial

--- a/02_Tipos_de_Variables/NOTEBOOK 02 Tipos de Datos, Variables y Lógica Matemática.ipynb
+++ b/02_Tipos_de_Variables/NOTEBOOK 02 Tipos de Datos, Variables y Lógica Matemática.ipynb
@@ -8,7 +8,7 @@
                 "## Fundamentos Profesionales y Sistemas de Validación (Versión Estudiante)\n",
                 "### Prof: Ing. Andrés Mena Abarca\n",
                 "\n",
-                "> **Nombre del estudiante:** Cristopher Mora Rodríguez\n",
+                "> **Nombre del estudiante:** Cristopher Mora Rodr+iguez\n",
                 "\n",
                 "---\n",
                 "\n",
