Se completa trabajo del día

--- a/02_Tipos_de_Variables/NOTEBOOK 02 Tipos de Datos, Variables y Lógica Matemática.ipynb
+++ b/02_Tipos_de_Variables/NOTEBOOK 02 Tipos de Datos, Variables y Lógica Matemática.ipynb
@@ -39,20 +39,34 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 7,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Producto: <class 'str'>\n",
+                        "Precio: <class 'float'>\n",
+                        "Unidades: <class 'int'>\n",
+                        "Envio: <class 'bool'>\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 💡 Live Coding: Inicializando el Inventario de una Tienda\n",
                 "\n",
                 "# 1. Crea las variables correspondientes con sus datos y aplica PEP 8\n",
-                "nombre_producto = \n",
-                "precio_unitario = \n",
-                "unidades_en_stock = \n",
-                "aplica_envio_gratis = \n",
+                "nombre_producto = \"Monitor Dell 32\\\"\"\n",
+                "precio_unitario = 35000.50\n",
+                "unidades_en_stock = 15\n",
+                "aplica_envio_gratis = True\n",
                 "\n",
                 "# 2. Usa print() y type() para auditar cómo Python clasificó cada variable\n",
-                "print(\"--- AUDITORÍA DE TIPOS DE DATOS ---\")\n",
+                "print(f\"Producto: { type(nombre_producto)}\")\n",
+                "print(f\"Precio: { type(precio_unitario)}\")\n",
+                "print(f\"Unidades: { type(unidades_en_stock)}\")\n",
+                "print(f\"Envio: { type(aplica_envio_gratis)}\")\n",
                 "\n",
                 "# Escribe tu código aquí:\n"
             ]
@@ -72,21 +86,42 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 8,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Bienvenido al Sistema de Ventas\n",
+                        "<class 'int'>\n",
+                        "procesando 15 unidades \n",
+                        "<class 'int'>\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 💡 Live Coding: Captura y Conversión de Cantidad (Con Seguridad)\n",
                 "\n",
                 "print(\"Bienvenido al Sistema de Ventas\")\n",
                 "\n",
                 "# 1. Solicita al usuario cuántas unidades desea comprar\n",
-                "cantidad_str = \n",
+                "cantidad_str = input(f\"Cuantas unidades de{ nombre_producto} desea compra?\") #se enlaza con celdas anteriores\n",
                 "\n",
                 "# 2. Escribe un bloque try-except para convertir cantidad_str a entero (int)\n",
                 "# Asegúrate de validar si la cantidad es mayor a 0.\n",
                 "\n",
-                "# Escribe tu código aquí:\n"
+                "# Escribe tu código aquí:\n",
+                "try:\n",
+                "    cantidad = int(cantidad_str)\n",
+                "    print(type(cantidad))\n",
+                "    if cantidad <= 0:\n",
+                "        print(\"ingrese una cantidad mayor a Cero\")\n",
+                "    else:\n",
+                "        print (f\"procesando {cantidad} unidades \")\n",
+                "        print(type(cantidad))\n",
+                "except ValueError:\n",
+                "    print(\"Error critico, por favor ingrese un número entero valido\") "
             ]
         },
         {
@@ -105,9 +140,28 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "==============================\n",
+                        "🧾 TÍCKET DE COMPRA\n",
+                        "==============================\n",
+                        "Subtotal: 525,007.50\n",
+                        "IVA 13%: ₡68,250.98 \n",
+                        "Total: ₡593,258.47\n",
+                        "------------------------------\n",
+                        "📦 LOGISTICA DE ENVIO\n",
+                        "Cajas completas requeridas: 3 \n",
+                        "Unidades sueltas en empaque individual: 3 \n",
+                        "------------------------------\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 💡 Live Coding: Cálculo Completo del Tícket y Logística\n",
                 "\n",
@@ -116,22 +170,37 @@
                 "\n",
                 "# 1. Matemáticas Financieras\n",
                 "# Calcula el subtotal, el monto_impuesto y el total_final\n",
-                "subtotal = \n",
-                "monto_impuesto = \n",
-                "total_final = \n",
+                "subtotal = precio_unitario * cantidad\n",
+                "monto_impuesto = subtotal * TASA_IMPUESTO\n",
+                "total_final = subtotal + monto_impuesto\n",
                 "\n",
                 "# 2. Matemáticas Logísticas \n",
                 "# Usa // para saber cuántas cajas completas salen\n",
                 "# Usa % para saber cuántos monitores sobran sueltos\n",
-                "cajas_llenas = \n",
-                "monitores_sueltos = \n",
+                "cajas_llenas = cantidad // CAPACIDAD_CAJA\n",
+                "monitores_sueltos = cantidad % CAPACIDAD_CAJA\n",
                 "\n",
                 "# 3. Impresión Profesional con F-Strings\n",
                 "print(\"\\n\" + \"=\"*30)\n",
                 "print(\"🧾 TÍCKET DE COMPRA\")\n",
                 "print(\"=\"*30)\n",
-                "# Imprime los resultados con 2 decimales y formato de miles (,)\n"
+                "# Imprime los resultados con 2 decimales y formato de miles (,)\n",
+                "print(f\"Subtotal: {subtotal:,.2f}\")\n",
+                "print(f\"IVA {TASA_IMPUESTO:.0%}: ₡{monto_impuesto:,.2f} \")\n",
+                "print(f\"Total: ₡{total_final:,.2f}\")\n",
+                "print(\"-\" * 30)\n",
+                "print(\"📦 LOGISTICA DE ENVIO\")\n",
+                "print(f\"Cajas completas requeridas: {cajas_llenas} \")\n",
+                "print(f\"Unidades sueltas en empaque individual: {monitores_sueltos} \")\n",
+                "print(\"-\" * 30)"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         },
         {
             "cell_type": "markdown",
@@ -152,24 +221,37 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "🎯 ANÁLISIS DE PROMOCIONES:\n",
+                        "Se a´lica descuento: False \n",
+                        "Lleva regalo: True \n"
+                    ]
+                }
+            ],
             "source": [
                 "# 💡 Live Coding: Motor de Promociones y Descuentos\n",
                 "\n",
                 "es_cliente_vip = True\n",
                 "\n",
                 "# PROMOCIÓN 1: Descuento del 10% (Uso de AND)\n",
-                "# Regla: Aplica SI el total es mayor a $1000 Y lleva más de 2 unidades.\n",
-                "aplica_descuento_10 = \n",
+                "# Regla: Aplica SI el total es mayor a 1 000 000 Y lleva más de 20 unidades.\n",
+                "aplica_descuento_10 = (total_final > 1000000 ) and (cantidad > 20)\n",
                 "\n",
                 "# PROMOCIÓN 2: Regalo Sorpresa (Uso de OR)\n",
                 "# Regla: Aplica SI es Cliente VIP O SI compró exactamente 5 unidades.\n",
-                "aplica_regalo = \n",
+                "aplica_regalo =  es_cliente_vip or (cantidad == 5)\n",
                 "\n",
                 "print(\"\\n🎯 ANÁLISIS DE PROMOCIONES:\")\n",
-                "# Imprime las dos variables de promociones aquí:\n"
+                "# Imprime las dos variables de promociones aquí:\n",
+                "print(f\"Se a´lica descuento: {aplica_descuento_10} \")\n",
+                "print(f\"Lleva regalo: {aplica_regalo} \")"
             ]
         },
         {
@@ -374,7 +456,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.0"
+            "version": "3.13.12"
         }
     },
     "nbformat": 4,
