--- a/02_Tipos_de_Variables/NOTEBOOK 02 Tipos de Datos, Variables y Lógica Matemática.ipynb
+++ b/02_Tipos_de_Variables/NOTEBOOK 02 Tipos de Datos, Variables y Lógica Matemática.ipynb
@@ -279,19 +279,19 @@
                 "# ¡NO MODIFICAR ESTA CELDA! Solo ejecútala e ingresa los datos.\n",
                 "\n",
                 "nombre = input(\"Nombre del estudiante: \").strip()\n",
-                "edad = int(input(\"Edad: \"))\n",
+                "edad = int(input(\"Edad: 15 \"))\n",
                 "grado = int(input(\"Grado (7-12): \"))\n",
                 "\n",
-                "hora = int(input(\"Hora actual (0-23): \"))\n",
-                "tiene_carnet = input(\"¿Tiene carnet? (si/no): \").strip().lower() == \"si\"\n",
-                "tiene_permiso = input(\"¿Tiene permiso del profe? (si/no): \").strip().lower() == \"si\"\n",
+                "hora = int(input(\"Hora actual (0-23): 6 \"))\n",
+                "tiene_carnet = input(\"¿Tiene carnet? (si/no): si \").strip().lower() == \"si\"\n",
+                "tiene_permiso = input(\"¿Tiene permiso del profe? (si/no):  \").strip().lower() == \"si\"\n",
                 "\n",
-                "computadoras_disponibles = int(input(\"Computadoras disponibles: \"))\n",
-                "cupos_maximos = int(input(\"Cupos máximos del laboratorio: \"))\n",
-                "estudiantes_dentro = int(input(\"¿Cuántos estudiantes hay dentro ahora?: \"))\n",
+                "computadoras_disponibles = int(input(\"Computadoras disponibles:  \"))\n",
+                "cupos_maximos = int(input(\"Cupos máximos del laboratorio:  \"))\n",
+                "estudiantes_dentro = int(input(\"¿Cuántos estudiantes hay dentro ahora?:  \"))\n",
                 "\n",
                 "equipo = input(\"Equipo que usará (pc/laptop): \").strip().lower()\n",
-                "tiene_cargador = input(\"¿Trae cargador? (si/no): \").strip().lower() == \"si\""
+                "tiene_cargador = input(\"¿Trae cargador? (si/no):  \").strip().lower() == \"si\""
             ]
         },
         {
@@ -321,7 +321,7 @@
                 "# =========================\n",
                 "\n",
                 "# 1. Valida la edad\n",
-                "edad_ok = \n",
+                "edad_ok =   \n",
                 "\n",
                 "# 2. Valida el grado\n",
                 "grado_ok = \n",
@@ -369,16 +369,31 @@
                 "# =========================\n",
                 "\n",
                 "# 1. Valida los cupos físicos\n",
-                "cupos_ok = \n",
+                "#cupos_ok = cupos_maximos - estudiantes_dentro #true false\n",
+                "if (estudiantes_dentro < cupos_maximos ):\n",
+                "    cupos_ok = True \n",
+                "else:\n",
+                "    cupos_ok = False\n",
                 "\n",
                 "# 2. Valida los recursos (Puedes usar if / elif / else)\n",
-                "recursos_ok = \n",
+                "recursos_ok =  True\n",
+                "cargador_ok = True\n",
+                "if (equipo == \"pc\"):\n",
+                "    if (computadoras_disponibles <=0 ):\n",
+                "        recursos_ok = False\n",
+                "elif (equipo == \"laptop\"):\n",
+                "    if (tiene_cargador == False):\n",
+                "        cargador_ok = False\n",
+                "else:\n",
+                "    recursos_ok = False\n",
+                "    \n",
+                " \n",
                 "\n",
                 "# 3. Valida la seguridad eléctrica\n",
-                "cargador_ok = \n",
+                "\n",
                 "\n",
                 "# 4. Consolida todas las validaciones en una sola variable (Usa 'and')\n",
-                "capacidad_ok = \n",
+                "capacidad_ok = cupos_ok and recursos_ok and cargador_ok\n",
                 "\n",
                 "print(\"\\n--- RESULTADO ESTUDIANTE B ---\")\n",
                 "print(\"capacidad_ok =\", capacidad_ok)\n",
