--- a/03_Condicionales_Ciclos_Listas/NOTEBOOK 03 - ok - Condicionales, Ciclos y Listas.ipynb
+++ b/03_Condicionales_Ciclos_Listas/NOTEBOOK 03 - ok - Condicionales, Ciclos y Listas.ipynb
@@ -10,7 +10,7 @@
     "## Fundamentos de Python | UMCA\n",
     "## Profesor: Ing. Andrés Mena Abarca\n",
     "\n",
-    "### <mark>**Nombre del estudiante:**</mark>\n",
+    "### <mark>**Nombre del estudiante: Cristopher Mora Rodríguez**</mark>\n",
     "\n",
     "---\n",
     "\n",
